# ex4

./: AstarAlgo.h  AstarNew.h  BFSAlgo.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFSAlgo.cpp  DFSAlgo.h  FileCacheManager.h  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  QueueComparator.h  QueueComperator.h  README.md  Searchable.h  Searcher.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  main.cpp
